[package]

name = "gag"
version = "0.1.10"
authors = ["Steven Allen <steven@stebalien.com>"]
description = "Gag, redirect, or hold stdout/stderr output. Currently only *nix operating systems are supported."

documentation = "https://docs.rs/gag/"
repository = "https://github.com/Stebalien/gag-rs"
keywords = ["stdout", "stderr", "stdio", "redirect"]
license = "MIT"

[dependencies]
libc = "0.2"
tempfile = "3.0"

[target.'cfg(windows)'.dependencies]
winapi = { version = "*", features = ["winbase", "wincon", "processenv", "handleapi", "namedpipeapi"] }

[dev-dependencies]
lazy_static = "1"
