[package]

name = "gag"
version = "0.1.10"
authors = ["Steven Allen <steven@stebalien.com>"]
description = "Gag, redirect, or hold stdout/stderr output. Currently only *nix operating systems are supported."

documentation = "https://docs.rs/gag/"
repository = "https://github.com/Stebalien/gag-rs"
keywords = ["stdout", "stderr", "stdio", "redirect"]
license = "MIT"

[dependencies]
tempfile = "3.0"
filedescriptor = { version = "0.7.3", git = "https://github.com/robinbernon/wezterm", branch = "AddingStdRedirects" }

[dev-dependencies]
lazy_static = "1"
