[package]
name = "gag"
version = "1.0.0"
authors = ["Steven Allen <steven@stebalien.com>"]
description = "Gag, redirect, or hold stdout/stderr output. Currently only *nix operating systems are supported."

documentation = "https://docs.rs/gag/"
repository = "https://github.com/Stebalien/gag-rs"
keywords = ["stdout", "stderr", "stdio", "redirect"]
edition = "2018"
license = "MIT"

[dependencies]
tempfile = "3.0"
filedescriptor = "0.8.0"

[dev-dependencies]
lazy_static = "1"
dirs = "3.0.2"
